--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^4.1.0",
     "@iconify/react": "^5.1.0",
     "astro": "^5.0.5",
+    "framer-motion": "^11.14.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
